syntax = "proto3";

package DummyMainItemPage;

option csharp_namespace = "Makc2022.Layer5.Sql.GrpcServer.Protos.Pages.DummyMain.Item";

service DummyMainItemPage {
	rpc Get (DummyMainItemPageGetRequest) returns (DummyMainItemPageGetReply);
}

message DummyMainItemPageGetRequest {
	string operation_code = 1;
	DummyMainDomainItemGetOperationInput item = 2;
}

message DummyMainItemPageGetReply {
	bool is_ok = 1;
	repeated string error_messages = 2;
	string operation_code = 3;
	repeated string warning_messages = 4;
	repeated string success_messages = 5;
	DummyMainItemPageGetReplyOutput output = 6;
}

message DummyMainItemPageGetReplyOutput {
	DummyMainDomainItemGetOperationOutput item = 1;	
}

message DummyMainTypeEntity {
	int64 id = 1;
	string name = 2;
}

message DummyMainDomainItemGetOperationInput {
	int64 id = 1;	
}

message DummyMainDomainItemGetOperationOutput {
	DummyMainTypeEntity dummy_main = 1;	
}
